--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "formidable": "^3.5.1",
+    "formik": "^2.4.6",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf-table-extractor": "^1.0.3",
     "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
