--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.21",
+    "@react-email/render": "^0.0.16",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "formidable": "^3.5.1",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
@@ -26,7 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
