--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
-MONGO_URL= 
-TOKEN_SECRET=
-DOMAIN=
-EMAIL_USER=
-EMAIL_PASS=
+MONGO_URL= "mongodb+srv://jaiswal2062:ODrs9bUWkRRtmyPg@personal.b3dq6u9.mongodb.net/?retryWrites=true&w=majority&appName=personal"
+TOKEN_SECRET=chaiorcode
+DOMAIN=http://localhost:3000
+EMAIL_USER="a0163a6febccc9"
+EMAIL_PASS="929daaa875be25"
+PDF_TO_JSON_URL = "http:localhost:3001/"
+JWT_SECRET="NextAuth_Secret"
+NEXTAUTH_SECRET="NextAuth"  
 
+GITHUB_ID = "ed90d7c93f1f7c4b97e0"
+GITHUB_SECRET = "8efc829efc40239505fb8dc82e1b23eaf4cf7720"      
